refactor(nix): build & test with nix flake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,16 @@ project(Glom)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_COMPILER "/run/current-system/sw/bin/clang++")
+
+set(DCMAKE_C_SCAN_FOR_MODULES ON)
+set(DCMAKE_CXX_SCAN_FOR_MODULES ON)
+
 
 include_directories(include)
 
 add_subdirectory(src)
-add_subdirectory(tests)
+
+if(BUILD_TESTING)
+    enable_testing()
+    add_subdirectory(tests)
+endif()
