--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,35 +1,38 @@
-
 if(BUILD_TESTING)
-    include(FetchContent)
+    # Try to find the system-installed GTest first
+    find_package(GTest QUIET)
 
-    FetchContent_Declare(
-            googletest
-            GIT_REPOSITORY https://github.com/google/googletest.git
-            GIT_TAG v1.17.0
-    )
-    if (WIN32)
-        # For Windows: Prevent overriding the parent project's compiler/linker settings
-        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    if (NOT GTest_FOUND)
+        # If not found, use FetchContent to download and build GTest
+        message(STATUS "System GTest not found, fetching via FetchContent...")
+        include(FetchContent)
+
+        FetchContent_Declare(
+                googletest
+                GIT_REPOSITORY https://github.com/google/googletest.git
+                GIT_TAG v1.17.0
+        )
+        if (WIN32)
+            set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+        endif()
+        FetchContent_MakeAvailable(googletest)
+
+        set(GTEST_USING_FETCH_CONTENT TRUE)
+    else()
+        message(STATUS "Found system GTest.")
+        # Ensure the GTest::gtest_main target is available
+        if (NOT TARGET GTest::gtest_main)
+            add_library(GTest::gtest_main INTERFACE IMPORTED)
+            target_link_libraries(GTest::gtest_main INTERFACE GTest::GTest GTest::Main)
+        endif()
     endif()
-    FetchContent_MakeAvailable(googletest)
 
     enable_testing()
-    add_executable(test_tokenizer tokenizer.cpp)
-    add_executable(test_parser parser.cpp)
-#    add_executable(test_expr expr.cpp)
 
     include(GoogleTest)
-    # Link lib and dependencies
-    foreach(test_target test_tokenizer test_parser)
-        target_link_libraries(${test_target}
-                glom
-                GTest::gtest_main
-        )
-        gtest_discover_tests(${test_target})
-    endforeach()
 
-    set_target_properties(test_tokenizer test_parser
-            PROPERTIES
-            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tests
-    )
-    endif()
+    # Link the test executables with GTest and the glom library
+    # by auto discovery
+    include(auto_discover_tests.cmake)
+
+endif()
