add(context): Context with parent and bindings

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(glom
         tokenizer.cpp
         parser.cpp
         expr.cpp
+        context.cpp
 )
 target_include_directories(glom PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
