add(eval): Evaluation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,9 @@ add_library(glom
         parser.cpp
         expr.cpp
         context.cpp
+        eval.cpp
 )
+
 target_include_directories(glom PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(glom_exe main.cpp)
