fix(quote parsing)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+file(GLOB PRIMITIVE_SOURCES "primitives/*.cpp")
+message(STATUS "Found PRIMITIVE_SOURCES files: ${PRIMITIVE_SOURCES}")
 add_library(glom
         tokenizer.cpp
         parser.cpp
@@ -6,12 +8,10 @@ add_library(glom
         eval.cpp
         primitive.cpp
         error.cpp
+        ${PRIMITIVE_SOURCES}
 )
-
-target_include_directories(glom PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
 add_executable(glom_exe main.cpp)
+
 target_link_libraries(glom_exe glom)
 
-
-install(TARGETS glom DESTINATION bin)
+install(TARGETS glom_exe DESTINATION bin)
