refactor(Expr: integer rational real): based on int64 and bigint(arbitrary precision integer)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(glom
         eval.cpp
         primitive.cpp
         error.cpp
+        bigint.cpp
+        number.cpp
         ${PRIMITIVE_SOURCES}
 )
 add_executable(glom_exe main.cpp)
