primitive(provide require): file-based module system

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(glom
         error.cpp
         bigint.cpp
         number.cpp
+        module.cpp
         ${PRIMITIVE_SOURCES}
 )
 add_executable(glom_exe main.cpp)
